--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,21 +7,22 @@ main:
   - name: Resume
     url: /
     weight: 10
-  - name: Contact
-    url: /#contact
+    
+  - name: Experience
+    url: experience/
     weight: 11
 #  - name: Talks
 #    url: /#talks
 #    weight: 12
+
 #  - name: News
 #    url: /#news
 #    weight: 13
-#  - name: Experience
-#    url: experience/
-#    weight: 20
+
 #  - name: Projects
 #    url: projects/
 #    weight: 30
+
 #  - name: Teaching
 #    url: teaching/
 #    weight: 40
