--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,13 +4,18 @@
   #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Resume
+  - name: Main
     url: /
     weight: 10
     
   - name: Experience
     url: experience/
     weight: 11
+
+  - name: Projects
+    url: projects/
+    weight: 12
+    
 #  - name: Talks
 #    url: /#talks
 #    weight: 12
@@ -18,10 +23,6 @@ main:
 #  - name: News
 #    url: /#news
 #    weight: 13
-
-#  - name: Projects
-#    url: projects/
-#    weight: 30
 
 #  - name: Teaching
 #    url: teaching/
