--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -6,7 +6,7 @@
 # Website name
 title: Edward Dong
 # Website URL
-baseURL: 'https://example.com/'
+baseURL: 'https://edward.donger.ca/'
 
 ############################
 ## LANGUAGE
